<resources>
    <string name="app_name">HackHERThon</string>
    <string name="title_activity_isolating_map">Map</string>
    <string name="title_activity_volunteer_login">VolunteerLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_isolatingnewtask">Add</string>
    <string name="text_isolatingpendingtasks">Pending</string>
    <string name="text_isolatingcompletedtasks">Complete</string>
    <string name="text_volunteersearchtask">Search</string>
    <string name="text_volunteerpendingtasks">Pending</string>
    <string name="text_volunteercompletedtasks">Complete</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="add_any_comment">Add any comment</string>
    <string name="comments">  Comments:</string>
    <string name="due_time">Due Time</string>
    <string name="postcode">Postcode</string>
    <string name="city">City</string>
    <string name="street_no">Street, No</string>
    <string name="your_location">Location</string>
    <string name="enter_custom_task">Custom Task</string>
    <string name="medication">Medication</string>
    <string name="isohelp" />
    <string name="other">Other</string>
    <string name="walk_pet">Walk Pet</string>
    <string name="add_your_wished_task">Add Your Wished Task</string>
    <string name="isohelp1">IsoHelp</string>
    <string name="add_new_task">Add New Task</string>
    <string name="groceries">Groceries</string>
    <string name="task_type">Task type:</string>

    <string-array name="spinner_hours">
        <item>Now</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>21:00</item>
        <item>21:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>
</resources>