<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/isolating_newtask"
        android:enabled="true"
        android:icon="@drawable/add"
        android:title="@string/text_isolatingnewtask"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/isolating_pendingtasks"
        android:enabled="true"
        android:icon="@drawable/tasks"
        android:title="@string/text_isolatingpendingtasks"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/isolating_completedtasks"
        android:enabled="true"
        android:icon="@drawable/completed"
        android:title="@string/text_isolatingcompletedtasks"
        app:showAsAction="ifRoom"/>
</menu>